--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>CodeSchool JS Path</h3>
 
-<h4>JavaScript RoadTrip Part1</h4>
+<h4>JavaScript Road Trip Part1</h4>
+
+<p>Special characters inside strings: 
+\t: advances to the next "tab stop". 
+\n: shifts the printout to a "new line"</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
