--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 <h4>JavaScript Road Trip Part1</h4>
 
-<p>Special characters inside strings: 
-\t: advances to the next "tab stop". 
+<p>Special characters inside strings:<br> 
+\t: advances to the next "tab stop". <br>
 \n: shifts the printout to a "new line"</p>
 
 <pre><code>$ cd your_repo_root/repo_name
