--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 
 <p>Special characters inside strings:<br> 
 \t: advances to the next "tab stop". <br>
-\n: shifts the printout to a "new line"</p>
+\n: shifts the printout to a "new line"<br><br>
+The length of strings can be accessed with the .length property:<br>
+</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>"antidisestablishmentarianism".length
+"One Fish, Two Fish, Red Fish, Blue Fish".length
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
