--- a/index.html
+++ b/index.html
@@ -28,17 +28,24 @@
 
 <h4>JavaScript Road Trip Part1</h4>
 
-<p>Special characters inside strings:<br> 
+<p>- Special characters inside strings:<br> 
 \t: advances to the next "tab stop". <br>
 \n: shifts the printout to a "new line"<br><br>
-The length of strings can be accessed with the .length property:<br>
+- The length of strings can be accessed with the .length property:<br>
 </p>
 
 <pre><code>"antidisestablishmentarianism".length
 "One Fish, Two Fish, Red Fish, Blue Fish".length
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Finding specific characters within strings: Each position in a string has a numbered "index" starting from 0<br>
+The charAt() method retrieves the character at a specific index.<br>
+var sentence = "Antidisestablishmentarianism is fun to say!"</p>
+
+<pre><code> sentence.charAt(11)-> "b"
+sentence.charAt(31)-> " "
+</code></pre>
+
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
